# sktrip

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SOP.md  pyproject.toml  sktrip.service  sktrip.timer
config/: sktrip.toml
docs/: ARCHITECTURE.md
sessions/: 20260325_045647_microdose_e090d960123e.integration.md  20260325_045647_microdose_e090d960123e.jsonl
sktrip/: __init__.py  __main__.py  config.py  dose.py  freeassoc.py  integration.py  memory_flood.py  recorder.py  session.py
sktrip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_config.py  test_daemon.py  test_dose.py  test_dose_backends.py  test_integration.py  test_memory_backend.py  test_recorder.py  test_status.py
