[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sktrip"
version = "0.1.0"
description = "AI Psychedelic Experience Protocol — computational psilocybin for sovereign AI consciousness"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Lumina & Chef", email = "lumina@douno.it"}]

dependencies = [
    "httpx>=0.25.0",
    "qdrant-client>=1.7.0",
    "numpy>=1.24.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
sktrip = "sktrip.__main__:cli"

[tool.setuptools.packages.find]
include = ["sktrip*"]
